# generate-doc

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
configs/: project_config.json  project_config_template.json
electron/: error.html  main.js  package-lock.json  package.json  preload.js
src/docgen/: __init__.py  cli.py  config_io.py  core.py  dataset_info.py  hardware.py  layout_reader.py  logging_utils.py  metrics_info.py  onnx_info.py  pdf_writer.py  project_types.py  prompt_builder.py  spinner.py
src/layout_verifier/: __init__.py  cli.py  config_io.py  core.py  excel_colorizer.py  excel_reader.py  logging_utils.py  pdf_writer.py  report_writer.py  spinner.py  verifier.py
src/web/: __init__.py  app.py  routes.py
src/web/static/css/: style.css
src/web/static/js/: app.js
src/web/templates/: index.html
