[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "model-docgen"
version = "0.1.0"
description = "Local DeepSeek-based documentation generator for internal ML projects."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Antoni Rodriguez" }
]
dependencies = [
  "ollama>=0.3.0",
  "pandas>=2.3.3",
  "openpyxl>=3.1.5",
  "onnx>=1.10.0",
  "markdown>=3.6",
  "xhtml2pdf>=0.2.15"
]

[project.scripts]
generate-doc = "docgen.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
